# Stratosphere

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt  GameWorld.json  GameWorld_working.json
Editor/entities/: CombatKnight.json  FantasyWarrior.json  TreeStumpWall.json  boss.json  brokenfence.json  bushes.json  demon.json  flower.json  smallfence.json  tree1.json  tree4.json  tree7.json  warrior.json  woodenboard.json
Editor/include/: EditorApp.h  EditorRenderRunner.h
Editor/include/editor/: BattleConfigEditor.h  EntityTypeEditor.h  GameWorldSpawner.h
Editor/src/: BattleConfigEditor.cpp  EditorApp.cpp  EditorRenderRunner.cpp  EntityTypeEditor.cpp  GameWorldSpawner.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/Shaders/: triangle.frag  triangle.vert  triangle.vert.spv
Engine/include/ECS/: ArchetypeStore.h  Components.h  ECSContext.h  EcsTrace.h  Prefab.h  PrefabSpawner.h  Query.h  QueryManager.h  VisibleRender.h
Engine/include/ECS/systems/: CommandSystem.h  LocalAvoidanceSystem.h  MovementSystem.h  NavGrid.h  NavGridBuilderSystem.h  PathfindingSystem.h  PoseUpdateSystem.h  RenderBoundsUpdateSystem.h  RenderSystem.h  RenderTransformUpdateSystem.h  SpatialIndexSystem.h  SteeringSystem.h  VisibilityCullingSystem.h  VisibleRenderGatherSystem.h
Engine/include/ECS/systems/Animation/: AnimationPlaybackSystem.h
Engine/include/Engine/: Application.h  Frustum.h  GroundPlaneRenderPassModule.h  MeshRenderPassModule.h  PerformanceMonitor.h  Renderer.h  SModelRenderPassModule.h  SwapChain.h  TrianglesRenderPassModule.h  VulkanContext.h
Engine/include/assets/: AssetManager.h  MaterialAsset.h  ModelAsset.h  ModelFormat.h  SModelLoader.h  TextureAsset.h
Engine/include/assets/model/: SModelAnimationRecords.h  SModelHeader.h  SModelMaterialRecord.h  SModelMeshRecord.h  SModelNodeRecord.h  SModelPrimitiveRecord.h  SModelTextureRecord.h
Engine/include/utils/: ImageUtils.h  JobSystem.h
Engine/shaders/: smodel.vert  smodel.vert.spv  triangle.vert
Engine/src/: Application.cpp  AssetManager.cpp  BufferUtils.cpp  EcsTrace.cpp  GLFWWindow.cpp  GroundPlaneRenderPassModule.cpp  ImageUtils.cpp  JobSystem.cpp  MeshRenderPassModule.cpp  PerformanceMonitor.cpp  QueryManagerTLS.cpp  Renderer.cpp  SModelLoader.cpp  SModelRenderPassModule.cpp  SwapChain.cpp  TextureAsset.cpp  TrianglesRenderPassModule.cpp
Engine/tools/GltfToSmodel/: GltfToSmodel.cpp
Sample/: BattleConfig.json  BattleConfig_working.json  CMakeLists.txt  MySampleApp.h  Scinerio.json  update.h
Sample/editor/: BattleConfigEditor.cpp  BattleConfigEditor.h
Sample/entities/: CombatKnight.json  FantasyWarrior.json  HeavyInfantry.json  LightInfantry.json  TreeStumpWall.json  boss.json  bushes.json  demon.json  grass.json  greentrees.json  king.json  smallbush.json  tree1.json  tree4.json  warrior.json  widefence.json
Sample/src/: MySampleApp.cpp  main.cpp  update.cpp
Sample/systems/: CombatSystem.h  LocalAvoidanceSystem.h  LocomotionAnimationControllerSystem.h  RenderSystem.h  SteeringSystem.h
Sample/utils/: CombatSystemImpl_core.inl  CombatSystemImpl_update.inl
